tests/NormalTests/paczka2/big_fuzzy/55533164.err
Error in line 5: 994Ck A679 45,9
Error in line 13: WLYv5 S16 4,0
Error in line 35: WLYv5 A679 67,0
Error in line 44: xPOk7xzCg A826 99,9
Error in line 40: WLYv5 S16 66,6
Error in line 48: WLYv5 A826 94,3
Error in line 49: WLYv5 S16 11,4
Error in line 55: 994Ck A679 52,4
Error in line 59: A162 S16 43,4
Error in line 61: A162 A826 90,7
Error in line 62: A162 A162 90,5
Error in line 60: f7zD2s S16 45,0
Error in line 75: xPOk7xzCg A162 5,1
Error in line 78: xPOk7xzCg A826 47,5
Error in line 81: xPOk7xzCg A826 80,89
Error in line 79: xPOk7xzCg S16 337,1
Error in line 82: xPOk7xzCg A826 390,7
Error in line 72: A162 A826 84,9
Error in line 86: 994Ck S16 86,3
Error in line 105: Gqm A826 65,7
Error in line 112: A162 A826 80,8
Error in line 118: WLYv5 A679 64,5
Error in line 119: 994Ck A162 99,0
Error in line 126: Gqm A826 50,4
Error in line 131: xPOk7xzCg S16 90,12
Error in line 121: xPOk7xzCg A679 66,5
Error in line 134: WLYv5 A1v2 84,5
Error in line 132: xPOk7xzCg S16 9,0
Error in line 150: A162 A679 99,3
Error in line 154: Gqm A679 16,3
Error in line 146: WLYv5 S16 57,6
Error in line 164: A162 S16 169,86
Error in line 162: ij1m S16 42,2
Error in line 143: xPOk7xzCg A679 95,5
Error in line 171: xPOk7xzCg A162 75,0
Error in line 168: WLYv5 A679 7,2
Error in line 175: xPOk7xzCg S16 28,7
Error in line 176: WLYv5 A162 2,6
Error in line 178: xPOk7xzCg A679 21,8
Error in line 160: A162 S16 77,8
Error in line 185: ij1m S1D 27,9
Error in line 193: 994Ck A826 75,8
Error in line 198: xPOk7xzCg S16 115,48
Error in line 203: ij1m A826 55,8
Error in line 204: f7zD2s S16 97,7
Error in line 208: f7zD2s A162 11,1
Error in line 207: A162 S16 55,7
Error in line 218: ij1m S16 89,1
Error in line 196: xPOk7xzCg S16 83,3
Error in line 228: WLYv5 A679 74,5
Error in line 227: A162 A162 55,7
Error in line 225: xPOk7xzCg A826 88,1
Error in line 235: xPOk7xzCg S16 36,1
